objects/NCS_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>EOI_completed_autumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOI completed (autumn)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOI_completed_summer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOI completed (summer)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Payment_Received__c</fullName>
        <label>Full Payment Received</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_of_offending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History of offending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Autumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Autumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Spring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Spring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Summer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Summer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Authority__c</fullName>
        <label>Local Authority</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Provider__c</fullName>
        <label>NCS Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFC Bournemouth</fullName>
                </value>
                <value>
                    <fullName>Aldershot</fullName>
                </value>
                <value>
                    <fullName>Bolton Lads and Girls Club</fullName>
                </value>
                <value>
                    <fullName>Portsmouth</fullName>
                </value>
                <value>
                    <fullName>Salford Foundation</fullName>
                </value>
                <value>
                    <fullName>Southampton (Youth Options)</fullName>
                </value>
                <value>
                    <fullName>The Mountbatten School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Complete__c</fullName>
        <label>Registration Complete</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Started_Phase_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rules out YPs who have started phase two</description>
        <label>Started Phase 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_prog_started__c</fullName>
        <formula>IF( OR( 
Programme__c = &quot;MouProg01&quot;,
Programme__c = &quot;SouProg01&quot;,
Programme__c = &quot;Spring 2013&quot;,
Programme__c = &quot;Spring 2013 1&quot;,
Programme__c = &quot;Spring 2013 2&quot;
),&quot;Spring&quot;,
IF( OR( 
Programme__c = &quot;MouProg02&quot;,
Programme__c = &quot;MouProg03&quot;,
Programme__c = &quot;MouProg04&quot;,
Programme__c = &quot;MouProg05&quot;,
Programme__c = &quot;MouProg06&quot;,
Programme__c = &quot;MouProg07&quot;,
Programme__c = &quot;MouProg08&quot;,
Programme__c = &quot;MouProg09&quot;,
Programme__c = &quot;MouProg10&quot;,
Programme__c = &quot;12th August 2013&quot;,
Programme__c = &quot;15th July 2013&quot;,
Programme__c = &quot;19th August 2013&quot;,
Programme__c = &quot;1st July 2013&quot;,
Programme__c = &quot;29th July 2013&quot;,
Programme__c = &quot;8th July 2013&quot;,
Programme__c = &quot;AldProg01&quot;,
Programme__c = &quot;BouProg01&quot;,
Programme__c = &quot;PorProg01&quot;,
Programme__c = &quot;PorProg02&quot;,
Programme__c = &quot;SouProg02&quot;,
Programme__c = &quot;SouProg03&quot;,
Programme__c = &quot;Summer 2013 1&quot;,
Programme__c = &quot;Summer 2013 2&quot;,
Programme__c = &quot;Summer 2013 3&quot;,
Programme__c = &quot;Summer 2013 4&quot;,
Programme__c = &quot;Summer 2013 5&quot;,
Programme__c = &quot;Wave 1&quot;,
Programme__c = &quot;Wave 2&quot;,
Programme__c = &quot;Wave 3&quot;
),&quot;Summer&quot;,
IF( OR( 
Programme__c = &quot;25th October 2013&quot;,
Programme__c = &quot;28th October 2013&quot;,
Programme__c = &quot;Autumn 2013 1&quot;,
Programme__c = &quot;Autumn13&quot;,
Programme__c = &quot;MouProg11&quot;,
Programme__c = &quot;MouProg12&quot;,
Programme__c = &quot;PorProg03&quot;,
Programme__c = &quot;PorProg3&quot;,
Programme__c = &quot;SFAutumn&quot;,
Programme__c = &quot;SouProg04&quot;
),&quot;Autumn&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time of Prog started</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NCS Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NCS Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCS Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>